# Agricola

./: README.md
Agricola_terminal/: CMakeLists.txt
Agricola_terminal/src/: CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  Main.cpp  MainBoard.cpp  MainBoard.h  Player.cpp  Player.h  PlayerBoard.cpp  PlayerBoard.h
Agricola_terminal/test/: CMakeLists.txt  CardTest.cpp  GameTest.cpp  MainBoardTest.cpp  PlayerBoardTest.cpp
